--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
       </div>
       
       <div class="col-span-1 sm:col-span-2 lg:col-span-3 flex justify-center">
-        <a href="#all-subjects" class="text-primary-600 hover:text-primary-700 font-medium flex items-center">
+        <a href="https://drive.google.com/drive/folders/1FaVHgjAkCdXiqDcS_V93rcUX0Hi2VLbL?usp=drive_link" class="text-primary-600 hover:text-primary-700 font-medium flex items-center">
           Special Short Notes 
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 ml-1">
             <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
