--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
 
       <!-- Work Card 3 -->
       <div class="bg-white rounded-2xl shadow-md overflow-hidden transform hover:scale-105 hover:shadow-xl transition-all duration-300"  data-category="web">
-        <img src="img/11.png" alt="Product Image" class="w-full h-56 object-cover">
+        <img src="w5.jpg" alt="Product Image" class="w-full h-56 object-cover">
         <div class="p-4">
           <h3 class="text-xl font-semibold mb-2">Nordic Lanka Cleaning Service Website</h3>
           <p class="text-gray-600 text-sm mb-4">Nordic Lanka provides affordable, eco-friendly cleaning services in Denmark, delivering spotless results with trusted staff and guaranteed customer satisfaction.</p>
